Support Guide button for XInput gamepads on Windows

XInput treats the Guide button as an OS-reserved button and does not
expose its state in the normal XInputGetState method. To access this
button, we will use the undocumented XInputGetStateEx method when it
is available.

BUG=716158

Change-Id: I5ab4bc65bae3badca59f65d360ee006587cdf106
Reviewed-on: https://chromium-review.googlesource.com/830664
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524787}
Former-commit-id: 49074422f4e0836b618956d053927790f011916e